apps/erin-apps/bsky-relay/sea1/patch-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: relay
spec:
  replicas: 0
  template:
    spec:
      containers:
        - name: relay
