apps/erin-apps/bsky-relay/sea1/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: relay
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  rules:
    - host: relay.owo.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: relay
                port:
                  number: 80
---
